dashboard/kuboard/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kuboard-route
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`kuboard.k3s.com`)
      kind: Rule
      services:
        - name: kuboard
          port: 80
  tls:
    secretName: https
